--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "apollo-server-express": "^3.13.0",
     "bcryptjs": "^2.4.3",
+    "core-js": "^3.36.0",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "express-graphql": "^0.12.0",
